--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <div class="card-body">
                         <h3 class="usertotal">Total Score: <span id="totalScore"></span></h3>
                         
-                        <h3 class="wins">Wins<span id="wins"></span></h3>
-                        <h3 class="lose">Lose<span id="lose"></span></h3>
+                        <h3 class="wins">Wins: <span id="wins"></span></h3>
+                        <h3 class="lose">Lose: <span id="lose"></span></h3>
 
                     </div>
                 </div>
